best report till now