@@ -10,7 +10,7 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 import pks.IncomeTax.model.Employee;
 import pks.IncomeTax.repository.EmployeeRepository;
-import pks.IncomeTax.service.ReportService;
+import pks.IncomeTax.service.IncomeTaxReportService;
 
 import java.net.URI;
 import java.nio.file.Path;
@@ -24,9 +24,9 @@ public class EmployeeController {
     private static final Logger logger = LoggerFactory.getLogger(EmployeeController.class);
 
     private final EmployeeRepository repo;
-    private final ReportService reportService;
+    private final IncomeTaxReportService reportService;
 
-    public EmployeeController(EmployeeRepository repo, ReportService reportService) {
+    public EmployeeController(EmployeeRepository repo, IncomeTaxReportService reportService) {
         this.repo = repo;
         this.reportService = reportService;
     }
@@ -35,7 +35,7 @@ public class EmployeeController {
     public ResponseEntity<Employee> create(@RequestBody Employee employee) {
         // Log incoming request to help diagnose duplicate submissions or payload issues
         logger.info("[{}] POST /api/employee received at {} on thread {}: name='{}', employeeId='{}', financialYear='{}', basicPay='{}'",
-                Instant.now(), Instant.now().toString(), Thread.currentThread().getId(),
+            Instant.now(), Instant.now().toString(), Thread.currentThread().threadId(),
                 employee.getName(), employee.getEmployeeId(), employee.getFinancialYear(), employee.getBasicPay());
 
         Employee saved = repo.save(employee);
@@ -52,7 +52,7 @@ public class EmployeeController {
     public ResponseEntity<Map<String, String>> generateReport(@PathVariable Long id) {
         return repo.findById(id).map(emp -> {
             try {
-                String filename = reportService.generateExcelReport(emp);
+                String filename = reportService.generate(emp);
                 String downloadUrl = "/api/employee/report/download/" + filename;
                 return ResponseEntity.ok(Map.of("downloadUrl", downloadUrl));
             } catch (Exception e) {
@@ -69,7 +69,7 @@ public class EmployeeController {
             UrlResource resource = new UrlResource(file.toUri());
             if (!resource.exists()) return ResponseEntity.notFound().build();
             return ResponseEntity.ok()
-                    .contentType(MediaType.parseMediaType("application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"))
+                    .contentType(MediaType.APPLICATION_PDF)
                     .header(HttpHeaders.CONTENT_DISPOSITION, "attachment; filename=\"" + filename + "\"")
                     .body(resource);
         } catch (Exception e) {
